

export class Ingredient {
  public constructor(
    id: string,
    name: string,
    description: string,
    price: number,
    glutinFree: boolean
  ) { }
}

