export class PizzaParty {
  public constructor(partyId: string, partyLink: string) { }
}
