classDiagram

    class Pizza{
    -List  ~Ingredient~ ingredients
    +String Name +get|-set
    +AddIngreadient(e : Ingredient)
    +RemoveIngredient(ingredientName: String)
    }
    
    class Ingredient{
    +String Name +get|-set
    +Bool IsAllergenic +get|-set
    +Int Quantity +get|-set
    }

    class Pizzeria{
        +String Piva +get|-set
        +String Name +get|-set
        -List~Pizza~ pizzaPresets 
        -List~Ingredient~ availableIngredients
        -Queue~PizzaOrder~ servingQueue
        AddPizzaToPreset(e : Pizza)
        RemovePizzaFromPreset(e: Pizza)
        AddAvailableIngredient(e: Ingredient) 
        ConsumeIngredient(e: Ingredient) Ingredient
        AcceptOrder()
        DeclineOrder()
    }

    Pizza <-- Ingredient
    Pizzeria <-- Pizza 
    Pizzeria <-- Ingredient

    class User{
        +String Username +get|-set
        +String PasswordHash +get|-set
        -List~Ingredient~ allergenics
        -List~Pizza~ publishedPizzas
        AddPublishedPizza(e : Pizza)
        RemovePublishedPizza(e: Pizza)
        AddAllergenic(e : Ingredient)
        RemoveAllergenic(e : Ingredient)
    }

    class Rider{
        +Bool AvailableToWork +get|-set
        -Queue~PizzaOrder~ servingQueue
        AcceptOrder()
        DeclineOrder()
    }

    class PizzaOrder{
     +User Requester +get|-set 
     +Pizza Pizza +get|-set 
     +Int Quantity +get|-set
    }

    Rider <|-- User
    PizzaOrder --> User 
    PizzaOrder --> Rider 
    PizzaOrder --> Pizzeria

    class PizzaParty{
     -List~User~ users
     +User Master +get|-set
     -List~PizzaOrder~ orders  
     InviteUser(user : User)
     AddUser(user: User)
     RemoveUser(user: User)
     AddOrder(e : PizzaOrder)
     RemoveOrder(e: PizzaOrder)
    }

    PizzaParty --> User
